--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </main>
 <footer class="mt-5">
     
-    <!-- CARD TODO (con margine sopra) -->
+    <!-- CARD TODO -->
   <div class="card mt-4 mb-3" style="width: 18rem;">
     <div class="card-header">
       Todo
