--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 
 
 <body>
-   <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid bg-dark">
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
 
-      <!-- LOGO SINISTRA -->
+      <!-- LOGO -->
       <a class="navbar-brand" href="#">
-        <img src="./img/duck.png" alt="Bootstrap" width="50" height="50">
+        <img src="./img/duck.png" width="50" height="50">
       </a>
 
-      <button class="navbar-toggler border-dark-subtle" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-              aria-expanded="false" aria-label="Toggle navigation">
+      <!-- TOGGLER MOBILE -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <!-- MENU -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Catalogo libri</a>
+            <a class="nav-link active" href="#">Catalogo libri</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-secondary" href="#">Anagrafica utenti</a>
@@ -43,31 +43,36 @@
           </li>
         </ul>
 
-        <!-- Barra di ricerca -->
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Cerca..." aria-label="Search">
-          <button class="btn btn-outline-success text-white border-white" type="submit">Cerca</button>
+        <!-- SEARCH -->
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Cerca...">
+          <button class="btn btn-outline-light" type="submit">Cerca</button>
         </form>
       </div>
-
     </div>
   </nav>
+  <div class="container mt-4">
+    <div class="row">
+     <!-- COLONNA SINISTRA: CATALOGO -->
+    <div class="col-12 col-lg-12">
 
-  <div class="container">
-    <section class="row mt-3">
-      <h1 class="col-6">Catalogo Libri</h1>
-      <div class="col-6 text-end">
-        <button type="button" class="btn btn-primary">Aggiungi Libro</button>
-      </div>
-    </section>
+      <section class="d-flex justify-content-between align-items-center mb-3">
+        <h1>Catalogo Libri</h1>
+        <button class="btn btn-primary">Aggiungi Libro</button>
+      </section>
+    </div>
+   </div>
   </div>
+
 </header>
 
 <main class="container mt-4">
-  <table class="table table-striped">
+  <div class="row">
+    <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">Titolo</th>
+        <th scope="col" class="d-none d-md-block d-lg-block">Data Prestito</th>
         <th scope="col">Stato</th>
         <th scope="col">Azione</th>
       </tr>
@@ -76,6 +81,7 @@
     <tbody>
       <tr>
         <td>I pilastri della terra</td>
+        <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -85,7 +91,9 @@
 
       <tr>
         <td>I promessi sposi</td>
+        <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
+       
         <td>
           <i class="bi bi-pencil me-2"></i>
           <i class="bi bi-trash-fill"></i>
@@ -94,6 +102,7 @@
 
       <tr>
         <td>Il signore degli anelli</td>
+         <td class="d-none d-md-block d-lg-block">18/10/2025</td>
         <td><button type="button" class="btn btn-warning">In prestito</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -103,6 +112,7 @@
 
       <tr>
         <td>Harry Potter e la pietra filosofale</td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -112,6 +122,7 @@
 
       <tr>
         <td>Il codice Da Vinci</td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-danger">Non disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -122,6 +133,7 @@
 
       <tr>
         <td>Shining</td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -132,6 +144,7 @@
 
       <tr>
         <td>La divina commedia </td>
+         <td class="d-none d-md-block d-lg-block"> 21/09/2023 </td>
         <td><button type="button" class="btn btn-warning">In prestito</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -142,6 +155,7 @@
 
       <tr>
         <td>il trono di spada </td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -152,6 +166,7 @@
 
       <tr>
         <td>Il mondo di sofia </td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-danger">Non disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -162,6 +177,7 @@
 
       <tr>
         <td>Le cronache di Narnia: il leone,ia strega e l'armadio</td>
+         <td class="d-none d-md-block d-lg-block">25/07/2023</td>
         <td><button type="button" class="btn btn-warning">In prestito</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -171,6 +187,7 @@
 
       <tr>
         <td>Il piccolo principe</td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -179,6 +196,7 @@
       </tr>
       <tr>
         <td>La storia infinita</td>
+         <td class="d-none d-md-block d-lg-block"> - </td>
         <td><button type="button" class="btn btn-success">Disponibile</button></td>
         <td>
           <i class="bi bi-pencil me-2"></i>
@@ -187,97 +205,74 @@
       </tr>
     </tbody>
   </table>
+</div>
 </main>
-<footer class="mt-5">
+<footer class="container mt-4">
     
-    <!-- CARD TODO -->
-  <div class="card mt-4 mb-3" style="width: 18rem;">
-    <div class="card-header">
-      Todo
+     <!-- COLONNA DESTRA: TODO + FAQ -->
+    <div class="col-12 col-md-12 col-lg-d-flex col-lg-flex">
+
+      <!-- CARD TODO -->
+      <div class="card mb-3">
+        <div class="card-header">Todo</div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><input type="checkbox"> Chiamare segreteria</li>
+          <li class="list-group-item"><input type="checkbox"> Mandare avvisi prestiti scaduti</li>
+          <li class="list-group-item"><input type="checkbox"> Ordinare nuovi libri</li>
+        </ul>
+      </div>
+
+      <!-- FAQ -->
+      <div class="card">
+        <div class="card-header">F.A.Q.</div>
+
+        <div class="accordion accordion-flush" id="faq">
+
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq1">
+                Come aggiungere un nuovo libro?
+              </button>
+            </h2>
+            <div id="faq1" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                Puoi aggiungerlo con il pulsante “Aggiungi Libro”.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq2">
+                Come posso accedere all'anagrafica utenti?
+              </button>
+            </h2>
+            <div id="faq2" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                Dal menu principale.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq3">
+                Posso usare la dashboard da mobile?
+              </button>
+            </h2>
+            <div id="faq3" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                Sì, è completamente responsive.
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
 
-    <ul class="list-group">
-      <li class="list-group-item">
-        <input class="form-check-input me-1" type="checkbox" id="firstCheckbox">
-        <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
-      </li>
-
-      <li class="list-group-item">
-        <input class="form-check-input me-1" type="checkbox" id="secondCheckbox">
-        <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestito scaduti</label>
-      </li>
-
-      <li class="list-group-item">
-        <input class="form-check-input me-1" type="checkbox" id="thirdCheckbox">
-        <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
-      </li>
-    </ul>
   </div>
-
-  <!-- CARD F.A.Q. -->
-  <div class="card" style="width: 18rem;">
-    <div class="card-header">
-      F.A.Q.
-    </div>
-
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-
-      <!-- FAQ 1 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="flush-headingOne">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false"
-                  aria-controls="flush-collapseOne">
-            Come aggiungere un nuovo libro?
-          </button>
-        </h2>
-        <div id="flush-collapseOne" class="accordion-collapse collapse"
-             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">
-            Puoi aggiungere un libro cliccando sul pulsante "Aggiungi Libro" nel catalogo.
-          </div>
-        </div>
-      </div>
-
-      <!-- FAQ 2 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="flush-headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                  aria-controls="flush-collapseTwo">
-            Come posso accedere all'anagrafica utenti?
-          </button>
-        </h2>
-        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-             aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">
-            Puoi accedervi dal menu principale in alto nella pagina.
-          </div>
-        </div>
-      </div>
-
-      <!-- FAQ 3 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="flush-headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseThree" aria-expanded="false"
-                  aria-controls="flush-collapseThree">
-            Posso usare questa dashboard da mobile?
-          </button>
-        </h2>
-        <div id="flush-collapseThree" class="accordion-collapse collapse"
-             aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">
-            Certo! È completamente responsive.
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  
-
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
