--- a/index.html
+++ b/index.html
@@ -68,152 +68,143 @@
 
 <main class="container mt-4">
   <div class="row">
-    <table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col">Titolo</th>
-        <th scope="col" class=" d-none d-md-block d-lg-block">Data Prestito</th>
-        <th scope="col">Stato</th>
-        <th scope="col">Azione</th>
-      </tr>
-    </thead>
+    <!-- MAIN CONTENT: left column on large screens -->
+    <div class="col-12 col-lg-8">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Titolo</th>
+            <th scope="col" class=" d-none d-md-block d-lg-block">Data Prestito</th>
+            <th scope="col">Stato</th>
+            <th scope="col">Azione</th>
+          </tr>
+        </thead>
 
-    <tbody>
-      <tr>
-        <td>I pilastri della terra</td>
-        <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+        <tbody>
+          <tr>
+            <td>I pilastri della terra</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>I promessi sposi</td>
-         <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-       
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>I promessi sposi</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>Il signore degli anelli</td>
-         <td class="d-none d-md-table-cell">18/10/2025</td>
-        <td><button type="button" class="btn btn-warning">In prestito</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>Il signore degli anelli</td>
+            <td class="d-none d-md-table-cell">18/10/2025</td>
+            <td><button type="button" class="btn btn-warning">In prestito</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>Harry Potter e la pietra filosofale</td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>Harry Potter e la pietra filosofale</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>Il codice Da Vinci</td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-danger">Non disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>Il codice Da Vinci</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-danger">Non disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
+          <tr>
+            <td>Shining</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>Shining</td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>La divina commedia </td>
+            <td class="d-none d-md-table-cell">21/09/2023</td>
+            <td><button type="button" class="btn btn-warning">In prestito</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
+          <tr>
+            <td>il trono di spada </td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>La divina commedia </td>
-          <td class="d-none d-md-table-cell">21/09/2023</td>
-        <td><button type="button" class="btn btn-warning">In prestito</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>Il mondo di sofia </td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-danger">Non disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
+          <tr>
+            <td>Le cronache di Narnia: il leone,ia strega e l'armadio</td>
+            <td class="d-none d-md-table-cell">27/07/2023</td>
+            <td><button type="button" class="btn btn-warning">In prestito</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
 
-      <tr>
-        <td>il trono di spada </td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
+          <tr>
+            <td>Il piccolo principe</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>La storia infinita</td>
+            <td class="d-none d-md-table-cell">-</td>
+            <td><button type="button" class="btn btn-success">Disponibile</button></td>
+            <td>
+              <i class="bi bi-pencil me-2"></i>
+              <i class="bi bi-trash-fill"></i>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-
-      <tr>
-        <td>Il mondo di sofia </td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-danger">Non disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
-
-
-      <tr>
-        <td>Le cronache di Narnia: il leone,ia strega e l'armadio</td>
-          <td class="d-none d-md-table-cell">27/07/2023</td>
-        <td><button type="button" class="btn btn-warning">In prestito</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
-
-      <tr>
-        <td>Il piccolo principe</td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
-      <tr>
-        <td>La storia infinita</td>
-          <td class="d-none d-md-table-cell">-</td>
-        <td><button type="button" class="btn btn-success">Disponibile</button></td>
-        <td>
-          <i class="bi bi-pencil me-2"></i>
-          <i class="bi bi-trash-fill"></i>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-</main>
-<footer class="container mt-4">
-  <div class="row">
-    
-     <!-- COLONNA DESTRA: TODO + FAQ -->
-    <div class="col-12 col-md-12 col-lg-4">
-
-      <!-- CARD TODO -->
+    <!-- SIDEBAR / FOOTER CONTENT: right column on large screens -->
+    <aside class="col-12 col-md-12 col-lg-4">
       <div class="card mb-3">
         <div class="card-header">Todo</div>
         <ul class="list-group list-group-flush">
@@ -223,7 +214,6 @@
         </ul>
       </div>
 
-      <!-- FAQ -->
       <div class="card">
         <div class="card-header">F.A.Q.</div>
 
@@ -255,11 +245,9 @@
 
         </div>
       </div>
-
-    </div>
-
+    </aside>
   </div>
-</footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
